# FLOW--learning-tracker

./: .gitignore  App.tsx  README.md  index.html  metadata.json  package-lock.json  package.json  types.ts
components/: AchievementUnlockedModal.tsx  AchievementsPage.tsx  AddTaskModal.tsx  Calendar.tsx  DeleteAccountModal.tsx  Dock.tsx  FlowPortal.tsx  FocusTimer.tsx  HomePage.tsx  PremiumPage.tsx  PremiumSuccessModal.tsx  SettingsPage.tsx  SignOutModal.tsx  StatsPage.tsx  TaskList.tsx  TitleBar.tsx  ToastNotification.tsx  UserProfile.tsx  achievementDisplay.ts
components/icons/: FlowIcon.tsx
docs/: ARCHITECTURE_PLAN.md  TASKS.md
i18n/: en.ts  index.ts  zh.ts
public/: splash.html
services/: achievementService.ts  dataService.ts  feedbackService.ts  index.ts  sessionService.ts  settingsService.ts  taskService.ts  userService.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_add_avatar_path.sql  003_add_achievement_seen_at.sql  004_add_app_settings.sql
src-tauri/src/: lib.rs
src-tauri/src/commands/: achievement.rs  app.rs  data_export.rs  mod.rs  session.rs  settings.rs  task.rs  user.rs
src-tauri/src/db/: mod.rs
src-tauri/src/models/: achievement.rs  mod.rs  session.rs  task.rs  user.rs
stores/: index.ts  sessionStore.ts  settingsStore.ts  taskStore.ts  userStore.ts
